[package]
name = "b7"
version = "0.1.0"
authors = ["Luke Biery <luke@bierysbargainbarn.com>"]

[dependencies]
nix = "0.11.0"
libc = "0.2.44"
regex = "1.0.6"
threadpool = "1.0"
spawn-ptrace = "0.1.0"
log = "0.4.6"
env_logger = "0.5.13"
clap = "2.32.0"
tui = "0.3.0"
termion = "1.5.1"
tui-logger = "0.2.0"

[build-dependencies]
bindgen = "0.42.2"
cc = "1.0.25"
