[package]
name = "b7"
version = "0.1.0"
authors = ["Luke Biery <luke@bierysbargainbarn.com>"]
edition = "2018"

[dependencies]
nix = "0.13.0"
libc = "0.2.44"
regex = "1.0.6"
log = "0.4.6"
env_logger = "0.5.13"
clap = "2.32.0"
tui = "0.3.0"
termion = "1.5.1"
tui-logger = "0.2.0"
num_cpus = "1.8.0"
static_assertions = "0.3.1"
lazy_static = "1.3.0"
scoped-pool = "1.0.0"
goblin = "0.0.21"
serde = { version = "1.0.90", features = ["derive"] }
serde_json = "1.0.39"


[build-dependencies]
bindgen = "0.42.2"
num_cpus = "1.8.0"
cc = "1.0.25"
walkdir = "2"

[dev-dependencies]
ctor = "0.1.8"
