[package]
name = "b7"
version = "0.1.0"
authors = ["Luke Biery <luke@bierysbargainbarn.com>"]
edition = "2018"

[dependencies]
nix = "0.15.0"
libc = "0.2.62"
regex = "1.2.1"
log = "0.4.6"
env_logger = "0.6.2"
clap = "2.33.0"
tui = "0.4.0"
termion = "1.5.3"
tui-logger = "0.3.1"
num_cpus = "1.10.1"
static_assertions = "0.3.4"
lazy_static = "1.3.0"
scoped-pool = "1.0.0"
goblin = "0.0.24"


[build-dependencies]
bindgen = "0.51.0"
num_cpus = "1.10.1"
cc = "1.0.40"
walkdir = "2.2.9"

[dev-dependencies]
ctor = "0.1.8"
